[tool.poetry]
name = "avangridhackathon"
version = "0.1.0"
description = ""
authors = ["Soham Bhattacharya <sohamb117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.1.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
